--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoApps">
-        <activity android:name=".ToProcessDynamicLinkActivity" >
+        <activity android:name=".AddToDoActivity"></activity>
+        <activity android:name=".ToProcessDynamicLinkActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
                     android:host="todoapps.com"
                     android:scheme="https" />
@@ -21,10 +24,10 @@
         </activity>
         <activity
             android:name=".ToDoActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MailAndPassActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
