--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoApps">
-        <activity android:name=".AddToDoActivity"></activity>
+        <activity android:name=".DetailContentActivity"></activity>
+        <activity android:name=".AddToDoActivity" />
         <activity android:name=".ToProcessDynamicLinkActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
