--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoApps">
-        <activity android:name=".RePasswordActivity"></activity>
+        <activity
+            android:name=".RePasswordActivity"
+            android:exported="false"/>
         <activity
             android:name=".UnsubscribeActivity"
             android:exported="false" />
